@@ -59,7 +59,7 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("https://walletdemofrontend1.vercel.app", "https://walletdemo-adminfrontend.vercel.app")); // Frontend URL
+        configuration.setAllowedOrigins(Arrays.asList("https://walletdemofrontend1.vercel.app", "https://walletdemo-adminfrontend.vercel.app")); // Frontend URL
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
         configuration.setAllowCredentials(true);
